--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "kgaut/potx",
   "description": "Translation template extractor port for Drupal 8",
   "keywords": ["l10n","drupal8","drupal"],
-  "license": "GPL-2.0+",
+  "license": "GPL-2.0-or-later",
   "homepage": "https://mespronos.net",
   "require": {
     "composer/installers": "~1.0"
